bk_ida/gobmkida/g1/modify_stupid_eye_vital_point
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/modify_stupid_eye_vital_point/src/engine/owl.c:3219:6: error: use of undeclared identifier 'dword_760CDC'
v8 = dword_760CDC[i]; 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/modify_stupid_eye_vital_point/src/obj/1/owl.o] Error 1
